REOPENED 247635
WebKit mach *_set_exception EXCEPTION_IDENTITY_PROTECTED adoption
https://bugs.webkit.org/show_bug.cgi?id=247635
Summary WebKit mach *_set_exception EXCEPTION_IDENTITY_PROTECTED adoption
bkayes
Reported 2022-11-08 13:50:51 PST
See rdar://101307915 for details
Attachments
Patch (5.41 KB, patch)
2023-01-26 16:42 PST, bkayes
ews-feeder: commit-queue-
Patch (5.65 KB, patch)
2023-01-26 17:06 PST, bkayes
ews-feeder: commit-queue-
Patch (5.65 KB, patch)
2023-01-26 17:38 PST, bkayes
ews-feeder: commit-queue-
Patch (5.65 KB, patch)
2023-01-26 18:22 PST, bkayes
no flags
Patch (5.84 KB, patch)
2023-01-27 10:50 PST, bkayes
no flags
Patch (4.85 KB, patch)
2023-01-30 13:07 PST, bkayes
ews-feeder: commit-queue-
Patch (4.85 KB, patch)
2023-01-30 14:19 PST, bkayes
no flags
Patch (5.83 KB, patch)
2023-01-31 11:29 PST, bkayes
no flags
Patch (10.02 KB, patch)
2023-02-06 17:19 PST, bkayes
no flags
Patch (10.02 KB, patch)
2023-02-06 22:38 PST, bkayes
no flags
Patch (10.02 KB, patch)
2023-02-07 14:42 PST, bkayes
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2022-11-08 13:51:16 PST
bkayes
Comment 2 2023-01-26 16:42:33 PST
bkayes
Comment 3 2023-01-26 17:06:03 PST
bkayes
Comment 4 2023-01-26 17:38:31 PST
bkayes
Comment 5 2023-01-26 18:22:47 PST
bkayes
Comment 6 2023-01-27 10:50:30 PST
bkayes
Comment 7 2023-01-30 10:44:47 PST
bkayes
Comment 8 2023-01-30 13:07:36 PST
bkayes
Comment 9 2023-01-30 14:19:41 PST
bkayes
Comment 10 2023-01-31 11:29:08 PST
bkayes
Comment 11 2023-02-06 17:19:10 PST
bkayes
Comment 12 2023-02-06 22:38:13 PST
bkayes
Comment 13 2023-02-07 14:42:25 PST
Mark Lam
Comment 14 2023-02-10 12:13:34 PST
EWS
Comment 15 2023-02-13 12:31:42 PST
Committed 260217@main (234fe91cff8a): <https://commits.webkit.org/260217@main> Reviewed commits have been landed. Closing PR #9330 and removing active labels.
Mark Lam
Comment 16 2023-02-13 14:31:24 PST
Comment on attachment 464897 [details] Patch The PR is the canonical patch which we reviewed.
Ryan Haddad
Comment 17 2023-02-14 09:49:38 PST
Mark Lam
Comment 18 2023-02-16 10:44:08 PST
This is not a security issue. Just adopting new API.
bkayes
Comment 19 2023-02-16 12:52:15 PST
EWS
Comment 20 2023-02-16 17:53:36 PST
Committed 260410@main (b9449c63c2ed): <https://commits.webkit.org/260410@main> Reviewed commits have been landed. Closing PR #10216 and removing active labels.
EWS
Comment 21 2023-02-27 10:26:04 PST
Committed 260888@main (d6d61bb1b76b): <https://commits.webkit.org/260888@main> Reviewed commits have been landed. Closing PR #10741 and removing active labels.
Mark Lam
Comment 22 2023-02-27 12:21:16 PST
This patch broke service worker tests, and was reverted in https://commits.webkit.org/260888@main.
Note You need to log in before you can comment on or make changes to this bug.