Only use EXCEPTION_IDENTITY_PROTECTED in thread_set_exception_ports https://bugs.webkit.org/show_bug.cgi?id=247635 rdar://101307915

Reviewed by Mark Lam.

First party applications will soon be required to use this flavor of
exception, as it is more favorable from a security perspective. This
change adopts that requirement.

* Source/WTF/wtf/threads/Signals.cpp:

Canonical link: https://commits.webkit.org/260217@main